Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>i wanna build a snowman</p>
+        <p>i wanna build a snowman<img src="https://www.google.co.uk/search?q=pulp+fiction+star+wars&amp;safe=strict&amp;espv=2&amp;biw=1920&amp;bih=974&amp;tbm=isch&amp;imgil=oJMuO9H_OUtnHM%253A%253BNkKiVBxdvIg1wM%253Bhttp%25253A%25252F%25252Fwallpaperswide.com%25252Fstar_wars_pulp_fiction-wallpapers.html&amp;source=iu&amp;pf=m&amp;fir=oJMuO9H_OUtnHM%253A%252CNkKiVBxdvIg1wM%252C_&amp;usg=__7gT9zvkEoe7Ie9lVRKNVGKbtiKg%3D&amp;ved=0ahUKEwi9lvOH8b7PAhWLpx4KHYHhDZEQyjcIPA&amp;ei=OnDyV72RL4vPeoHDt4gJ#imgrc=oJMuO9H_OUtnHM%3A" alt=""></p>
       </section>
     </div>
 
